Fix scrollbar flash on windows

--- a/app/styles/global.styl
+++ b/app/styles/global.styl
@@ -31,6 +31,7 @@ body,
 
 body
 	font-size $base-font-size
+	overflow visible
 
 .svg-icon--gd-logo
 	padding-right 0.2em
